test_suite/tests/ui/fail/invalid_arg_count_min_max/invalid_option_min_max.rs
use clapi::macros::*;

#[command]
#[option(value, min=2, max=0)]
fn test(value: Vec<i64>){}

fn main(){}