test_suite/tests/ui/fail/invalid_arg_count_min_max/invalid_option_min_max.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_min_max.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid argument count `min` cannot be greater than `max`
